fix z-index

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -563,6 +563,7 @@
     left: 0;
 
     padding: toRem(25) toRem(15);
+    z-index: 150;
   }
 
   opacity: 0;
